k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: lottery-service

spec:

 type:
   LoadBalancer

 selector:
   app: lottery

 ports:

 - port: 80

   targetPort: 5000
