k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
 name: lottery

spec:

 rules:

 - http:

     paths:

     - path: /

       pathType: Prefix

       backend:

        service:

         name:
          lottery-service

         port:

          number: 80
